Add first versión of RNN

--- a/sentimentAnalysisModel.IPYNB
+++ b/sentimentAnalysisModel.IPYNB
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "0.4727272727272727"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "array([0.        , 0.47272727])"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "array([0., 1.])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "array([0.        , 0.64197531])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\losses.py:2664: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -335,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
@@ -350,15 +350,15 @@
       "=================================================================\n",
       " simple_rnn (SimpleRNN)      (None, 64)                5952      \n",
       "                                                                 \n",
-      " batch_normalization (Batch  (None, 64)                256       \n",
-      " Normalization)                                                  \n",
+      " batch_normalization (BatchN  (None, 64)               256       \n",
+      " ormalization)                                                   \n",
       "                                                                 \n",
       " dense (Dense)               (None, 10)                650       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 6858 (26.79 KB)\n",
-      "Trainable params: 6730 (26.29 KB)\n",
-      "Non-trainable params: 128 (512.00 Byte)\n",
+      "Total params: 6,858\n",
+      "Trainable params: 6,730\n",
+      "Non-trainable params: 128\n",
       "_________________________________________________________________\n",
       "None\n"
      ]
@@ -381,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\optimizers\\__init__.py:300: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
       "\n"
      ]
     }
@@ -405,7 +405,252 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Training the model:"
+    "Refactoring the data:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training the model:\n",
+    "\n",
+    "- Creating a Tokenizer object. Tokenizer is a Keras class used to convert text into sequences of tokens (words). This object will contain information about the vocabulary of the data set and will allow text to be transformed into sequences of integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.text import Tokenizer\n",
+    "\n",
+    "tokenizer = Tokenizer(num_words=1000,lower=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This method examines the text and builds the tokenizer's internal vocabulary, assigning a unique index to each word in the training set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.fit_on_texts(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assigning each word in the vocabulary will be assigned a unique integer.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sequence_of_integers = tokenizer.texts_to_sequences(X_train)\n",
+    "X_test_sequence_of_integers = tokenizer.texts_to_sequences(X_test)\n",
+    "\n",
+    "# Adding 1 because of reserved 0 index\n",
+    "vocab_size = len(tokenizer.word_index) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.utils import pad_sequences\n",
+    "\n",
+    "\n",
+    "maxlen = 100\n",
+    "\n",
+    "X_train_sequence_of_integers_padded = pad_sequences(X_train_sequence_of_integers, padding='post', maxlen=maxlen)\n",
+    "\n",
+    "\n",
+    "X_test_sequence_of_integers_padded = pad_sequences(X_test_sequence_of_integers, padding='post', maxlen=maxlen)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Building the model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, SimpleRNN,Activation\n",
+    "from keras import optimizers\n",
+    "from keras.utils import pad_sequences\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "X_train_np = np.array(X_train_sequence_of_integers_padded).reshape(X_train_sequence_of_integers_padded.shape[0],X_train_sequence_of_integers_padded.shape[1],1)\n",
+    "\n",
+    "\n",
+    "X_test_np = np.array(X_test_sequence_of_integers_padded).reshape(X_test_sequence_of_integers_padded.shape[0],X_test_sequence_of_integers_padded.shape[1],1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vainilla RNN:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_classes = 2\n",
+    "\n",
+    "def vainilla_rnn():\n",
+    "    model = Sequential()\n",
+    "    model.add(SimpleRNN(50, input_shape=(maxlen,1),return_sequences=False))\n",
+    "    model.add(Dense(num_classes))\n",
+    "    model.add(Activation('softmax'))\n",
+    "    model.summary()\n",
+    "\n",
+    "    adam= optimizers.Adam(lr=0.001)\n",
+    "    model.compile(loss='sparse_categorical_crossentropy', optimizer=adam, metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Cristian Perafan\\AppData\\Local\\Temp\\ipykernel_6900\\2424741882.py:5: DeprecationWarning: KerasClassifier is deprecated, use Sci-Keras (https://github.com/adriangb/scikeras) instead. See https://www.adriangb.com/scikeras/stable/migration.html for help migrating.\n",
+      "  model = KerasClassifier(build_fn=vainilla_rnn, epochs=10, batch_size=32, verbose=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training\n",
+    "\n",
+    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "\n",
+    "model = KerasClassifier(build_fn=vainilla_rnn, epochs=10, batch_size=32, verbose=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " simple_rnn_2 (SimpleRNN)    (None, 50)                2600      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 2)                 102       \n",
+      "                                                                 \n",
+      " activation_1 (Activation)   (None, 2)                 0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2,702\n",
+      "Trainable params: 2,702\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\utils\\tf_utils.py:490: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Cristian Perafan\\VC workspace\\sentiment-analysisModel-ti2\\venv\\Lib\\site-packages\\keras\\engine\\base_layer_utils.py:380: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "61/61 [==============================] - 2s 11ms/step - loss: 0.6991 - accuracy: 0.4971\n",
+      "Epoch 2/10\n",
+      "61/61 [==============================] - 1s 11ms/step - loss: 0.6953 - accuracy: 0.4997\n",
+      "Epoch 3/10\n",
+      "61/61 [==============================] - 1s 11ms/step - loss: 0.6936 - accuracy: 0.5086\n",
+      "Epoch 4/10\n",
+      "61/61 [==============================] - 1s 11ms/step - loss: 0.6956 - accuracy: 0.5039\n",
+      "Epoch 5/10\n",
+      "61/61 [==============================] - 1s 10ms/step - loss: 0.6944 - accuracy: 0.5023\n",
+      "Epoch 6/10\n",
+      "61/61 [==============================] - 1s 10ms/step - loss: 0.6937 - accuracy: 0.5101\n",
+      "Epoch 7/10\n",
+      "61/61 [==============================] - 1s 10ms/step - loss: 0.6943 - accuracy: 0.5070\n",
+      "Epoch 8/10\n",
+      "61/61 [==============================] - 1s 10ms/step - loss: 0.6993 - accuracy: 0.4857\n",
+      "Epoch 9/10\n",
+      "61/61 [==============================] - 1s 11ms/step - loss: 0.6987 - accuracy: 0.5086\n",
+      "Epoch 10/10\n",
+      "61/61 [==============================] - 1s 10ms/step - loss: 0.6984 - accuracy: 0.5044\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1bc590db210>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "model.fit(X_train_np, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26/26 [==============================] - 0s 6ms/step\n",
+      "0.5078787878787879\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_test_np)\n",
+    "\n",
+    "print(accuracy_score(Y_test, y_pred))   "
    ]
   }
  ],
